--- a/getdinerotoday/templates/landingpages/index.html
+++ b/getdinerotoday/templates/landingpages/index.html
@@ -46,19 +46,12 @@
                         companies that actually do the steps to help you build your business credit for you for an
                         affordable price.</p>
                     <a class="btn btn-theme wow fadeInUp" data-wow-duration="3s" data-wow-delay="0.5s"
-                       href="https://www.youtube.com/watch?v=5n2s3fpZC9U&t=2s" target="_blank"
+                       href="https://www.youtube.com/watch?v=xNCfnbGT5hY&t=726s" target="_blank"
                        data-text="Watch Our Webinar"
                        style="visibility: visible; animation-duration: 3s; animation-delay: 0.5s; animation-name: fadeInUp; margin-top: 5px;">
                         <span>W</span><span>a</span><span>t</span><span>c</span><span>h</span>
                         <span> </span><span>O</span><span>u</span><span>r</span>
                         <span>W</span><span>e</span><span>b</span><span>i</span><span>n</span><span>a</span><span>r</span>
-                    </a>
-                    <a class="btn btn-dark wow fadeInUp" data-wow-duration="3s" data-wow-delay="0.5s"
-                       href="https://getdinerotoday.setmore.com/resourcebookingpage/r8bbebe11bc17836e0391491b03bf0426b86724a4"
-                       target="_blank" data-text="Book An Appointment"
-                       style="visibility: visible; animation-duration: 3s; animation-delay: 0.5s; animation-name: fadeInUp; margin-left: unset !important; margin-top: 5px; ">
-                        <span>B</span><span>o</span><span>o</span><span>k</span> <span>A</span><span>n</span>
-                        <span>A</span><span>p</span><span>p</span><span>o</span><span>i</span><span>n</span><span>t</span><span>m</span><span>e</span><span>n</span><span>t</span>
                     </a>
                 </div>
             </div>
@@ -102,10 +95,6 @@
                     </div>
                     <p class="lead">Click The Play Button To The Left To See Our Software Demo</p>
                     <a class="btn btn-theme btn-circle" href="/pricing" data-text="">Sign Up Today
-                    </a>
-                    <a class="btn btn-dark btn-circle"
-                       href="https://getdinerotoday.setmore.com/resourcebookingpage/r8bbebe11bc17836e0391491b03bf0426b86724a4"
-                       target="_blank" data-text=""> Schedule An Appointment
                     </a>
                 </div>
             </div>
@@ -252,48 +241,22 @@
                 </div>
             </div>
             <div class="row mt-5">
-                <div class="col-lg-4 col-md-12">
-                    <div class="featured-item style-2">
-                        <div class="featured-icon"><i class="flaticon-data"></i>
-                            <span class="rotateme"></span>
-                        </div>
-                        <div class="featured-title">
-                            <h5>Free Credit Repair For The Entire Year</h5>
-                        </div>
-                        <div class="featured-desc">
-                            <p>We Do Free Credit Repair For You For The Entire Year.</p>
-                        </div>
-                    </div>
-                </div>
                 <div class="col-lg-4 col-md-12 md-mt-5">
                     <div class="featured-item style-2">
                         <div class="featured-icon"><i class="flaticon-collaboration"></i>
                             <span class="rotateme"></span>
                         </div>
                         <div class="featured-title">
-                            <h5>$500 in free ads & Marketing Course </h5>
+                            <h5>$1,500 in Free Advertising & Marketing Course </h5>
                         </div>
                         <div class="featured-desc">
-                            <p>We give your $500 In Free Advertising Coupons To Grow Your Business & Teach You How To
+                            <p>We Give You $1,500 In Free Advertising Coupons To Grow Your Business & Teach You How To
                                 Market Your Business With Our Marketing Course. </p>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-12 md-mt-5">
-                    <div class="featured-item style-2">
-                        <div class="featured-icon"><i class="flaticon-market"></i>
-                            <span class="rotateme"></span>
-                        </div>
-                        <div class="featured-title">
-                            <h5>Get 25% Off Of Tradelines With Our Program</h5>
-                        </div>
-                        <div class="featured-desc">
-                            <p>You Will Get 25% Off Of Authorized User Tradelines For Life With Our Program.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="row mt-5">
-                    <div class="col-lg-6 col-md-12">
+
+                    <div class="col-lg-4 col-md-12">
                         <div class="featured-item style-2">
                             <div class="featured-icon"><i class="flaticon-data"></i>
                                 <span class="rotateme"></span>
@@ -306,43 +269,33 @@
                             </div>
                         </div>
                     </div>
-                </div>
             </div>
         </div>
     </section>
 
     <section class="pos-r pt-0">
-        <div class="hexagon-bg style-2">
-            <div class="hexagon"></div>
-            <div class="hexagon"></div>
-            <div class="hexagon"></div>
-            <div class="hexagon"></div>
-        </div>
-        <div class="container">
-            <div class="row text-center">
-                <div class="col-lg-12 col-md-12 ml-auto mr-auto">
-                    <div class="section-title">
-                        <div class="title-effect">
-                            <div class="bar bar-top"></div>
-                            <div class="bar bar-right"></div>
-                            <div class="bar bar-bottom"></div>
-                            <div class="bar bar-left"></div>
-                        </div>
-                        <h2 class="title">Why Buy From Us?</h2>
-                        <div class="youtube-player" data-id="uS7BjJ83ZIQ" data-related="0" data-control="0"
-                             data-info="1" data-fullscreen="0"
-                             style="width:100%;display: block; position: relative;cursor: pointer;max-height:NaNpx;height:100%; overflow:hidden;padding-bottom:56.25%;margin:0 auto">
-                            <img src="https://getdinerotoday.com/images/mackbook/02.jpg"
-                                 style="bottom: -100%; display: block; left: 0; margin: auto; max-width: 100%; width: 100%;height:auto; position: absolute; right: 0; top: -100%;">
-                            <div style="height: 72px; width: 72px; left: 50%; top: 50%; margin-left: -36px; margin-top: -36px; position: absolute; background: url('https://i.imgur.com/TxzC70f.png') no-repeat;"></div>
-                        </div>
-
-
-                        <!--<iframe width="100%" height="515" src="https://www.youtube.com/embed/uS7BjJ83ZIQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
-                    </div>
-                </div>
+      <div class="hexagon-bg style-2">
+        <div class="hexagon"></div>
+        <div class="hexagon"></div>
+        <div class="hexagon"></div>
+        <div class="hexagon"></div>
+      </div>
+      <div class="container">
+        <div class="row text-center">
+          <div class="col-lg-12 col-md-12 ml-auto mr-auto">
+            <div class="section-title">
+              <div class="title-effect">
+                <div class="bar bar-top"></div>
+                <div class="bar bar-right"></div>
+                <div class="bar bar-bottom"></div>
+                <div class="bar bar-left"></div>
+              </div>
+              <h2 class="title">Why Buy From Us?</h2>
+            <iframe width="100%" height="515" src="https://www.youtube.com/embed/uS7BjJ83ZIQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
+          </div>
         </div>
+      </div>
     </section>
     <!--about end-->
 
@@ -817,11 +770,8 @@
                                 </ul>
                                 <br>
                                 <div class="col-md-12 mt-2">
-                                    <a href="/foreverfree" class="btn btn-theme btn-circle">Sign Up For Forever Free
+                                    <a href="https://www.getdinerotoday.com/user/login/" class="btn btn-theme btn-circle">Sign Up For Forever Free
                                         Package</a>
-                                    <br><br>
-                                    <a href="/foreverfree" class="btn btn-theme btn-circle">Watch Video On Everything
-                                        The Forever Free Package Gives You</a>
                                 </div>
                             </div>
                         </div>
@@ -857,24 +807,18 @@
                                 <li>Full Video Library & Live Chat Assistants To Be Able To Answer Any Questions 24/7
                                 </li>
                                 <li>Your Own Backend Client Portal To Track Progress</li>
-                                <li>Free Credit Repair For The Entire Year (Today Only)</li>
                                 <li>Full Access To Our Create My Financing Plan Section (*You Get Your Own Financing
                                     Plan Based On Your Current Situation* & Access To 300+ Lenders)
                                 </li>
-                                <li>$500 in free ads (Today Only)</li>
-                                <li>Get 25% Off Of Tradelines With Our Program</li>
                                 <li>Free Access To Our Affiliate Program</li>
                                 <li>100% action based money-back guarantee if you are not satisfied</li>
                             </ul>
                             <br>
                             <div class="col-md-12 mt-2">
-                                <a href="/financing" class="btn btn-theme btn-circle">$1,499 Payment Option</a><br><br>
+                                <a href="/financing" class="btn btn-theme btn-circle">$999 Annual Payment Option</a><br><br>
                                 <a href="/financing" class="btn btn-theme btn-circle">No Money Down Option Subject To
                                     Financing</a><br><br>
-                                <a href="/financing" class="btn btn-theme btn-circle">3 Monthly Payment Option Of
-                                    $549</a><br><br>
-                                <a href="/financing" class="btn btn-theme btn-circle">Monthly Payment Option Of
-                                    $159.99</a>
+                                <a href="/financing" class="btn btn-theme btn-circle">$109.99 Monthly Payment Option</a><br>
                             </div>
                         </div>
                     </div>
