--- a/getdinerotoday/templates/landingpages/services.html
+++ b/getdinerotoday/templates/landingpages/services.html
@@ -39,43 +39,6 @@
 
         <section class="pos-r">
             <div class="container">
-                <div class="row text-center">
-                    <div class="col-lg-8 col-md-12 ml-auto mr-auto">
-                        <div class="section-title">
-                            <div class="title-effect title-effect-2">
-                                <div class="ellipse"></div>
-                                <i class="la la-cubes"></i>
-                            </div>
-                            <h2 class="title">Learn More About Our Services</h2>
-                        </div>
-                    </div>
-                </div>
-                <section class="contact-info p-0 z-index-1">
-                    <div class="container">
-                        <div class="row align-items-center">
-                            <div class="col-lg-6 col-md-12">
-                                <div class="contact-media">
-                                    <img class="img-center" src="/static/images/services/choose-2.jpg" alt="">
-                                    <span>Business Builder Program</span>
-                                    <div class="col-md-12 mt-2">
-                                        <a href="/pricing" class="btn btn-theme btn-circle" target="_blank">Sign Up
-                                            Today</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-lg-6 col-md-6 md-mt-5">
-                                <div class="contact-media">
-                                    <img class="img-center" src="/static/images/services/choose-3.jpg" alt="">
-                                    <span>Business Funding Program</span>
-                                    <div class="col-md-12 mt-2">
-                                        <a href="/pricing" class="btn btn-theme btn-circle" target="_blank">Sign Up
-                                            Today</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </section>
 
                 <div class="container">
                     <div class="row align-items-center">
@@ -108,10 +71,6 @@
                             </div>
                             <p class="lead">Click The Play Button To The Left To See Our Software Demo</p>
                             <a class="btn btn-theme btn-circle" href="/pricing" data-text="">Sign Up Today
-                            </a>
-                            <a class="btn btn-dark btn-circle"
-                               href="https://getdinerotoday.setmore.com/resourcebookingpage/r8bbebe11bc17836e0391491b03bf0426b86724a4"
-                               target="_blank" data-text=""> Schedule An Appointment
                             </a>
                         </div>
                     </div>
@@ -844,25 +803,18 @@
                                                 <li>Create My Credit Repair Plan Access</li>
                                                 <li>Apply For Business Loan Access To Get Best Rates</li>
                                                 <li>Business Credit Building Course (Usually $1,000)</li>
-                                                <li>Full Starter Vendor, Retail Store Credit, Revolving Store
-                                                    Credit, &
-                                                    Cash Credit List
+                                                <li>Full Starter Vendor, Retail Store Credit, Revolving Store Credit, & Cash Credit
+                                                    List
                                                 </li>
                                                 <li>Your Own Backend Client Portal To Track Progress</li>
-                                                <li>Full Access To Our Create My Financing Plan Section (*You Get
-                                                    Your
-                                                    Own Financing Plan Based On Your Current Situation* & Access To
-                                                    300+
-                                                    Lenders)
+                                                <li>Full Access To Our Create My Financing Plan Section (*You Get Your Own Financing
+                                                    Plan Based On Your Current Situation* & Access To 300+ Lenders)
                                                 </li>
                                             </ul>
                                             <br>
                                             <div class="col-md-12 mt-2">
-                                                <a href="/foreverfree" class="btn btn-theme btn-circle">Sign Up For
-                                                    Forever Free Package</a>
-                                                <br><br>
-                                                <a href="/foreverfree" class="btn btn-theme btn-circle">Watch Video
-                                                    On Everything The Forever Free Package Gives You</a>
+                                                <a href="https://www.getdinerotoday.com/user/login/" class="btn btn-theme btn-circle">Sign Up For Forever Free
+                                                    Package</a>
                                             </div>
                                         </div>
                                     </div>
@@ -876,8 +828,8 @@
                                     <br>
                                     <div class="price-list">
                                         <ul class="list-unstyled">
-                                            <li>We help you get $50,000 in business vendor credit, we set up your
-                                                business credibly, and manage your account
+                                            <li>We help you get $50,000 in business vendor credit, we set up your business credibly,
+                                                and manage your account
                                             </li>
                                             <li>Create My Financing Plan Access</li>
                                             <li>Create My Business Credit Building Plan Access</li>
@@ -887,41 +839,29 @@
                                             <li>Free Web Hosting For The Entire Year</li>
                                             <li>We Buy Your Fax Number For Entire Year(Usually $100+)</li>
                                             <li>Professional Email (Usually $100+)</li>
-                                            <li>Toll-Free Number Purchase For The Entire Year (Whole sale rate of
-                                                $10
-                                                Per Month On Up To 2 Other Members) (Savings Of $1,500+ Per Year)
+                                            <li>Toll-Free Number Purchase For The Entire Year (Whole sale rate of $10 Per Month On
+                                                Up To 2 Other Members) (Savings Of $1,500+ Per Year)
                                             </li>
                                             <li>Business Credit Building Course (Usually $1,000)</li>
-                                            <li>Full Starter Vendor, Retail Store Credit, Revolving Store Credit, &
-                                                Cash
-                                                Credit List
+                                            <li>Full Starter Vendor, Retail Store Credit, Revolving Store Credit, & Cash Credit
+                                                List
                                             </li>
                                             <li>411 Listing</li>
-                                            <li>Full Video Library & Live Chat Assistants To Be Able To Answer Any
-                                                Questions 24/7
+                                            <li>Full Video Library & Live Chat Assistants To Be Able To Answer Any Questions 24/7
                                             </li>
                                             <li>Your Own Backend Client Portal To Track Progress</li>
-                                            <li>Free Credit Repair For The Entire Year (Today Only)</li>
-                                            <li>Full Access To Our Create My Financing Plan Section (*You Get Your
-                                                Own
-                                                Financing Plan Based On Your Current Situation* & Access To 300+
-                                                Lenders)
+                                            <li>Full Access To Our Create My Financing Plan Section (*You Get Your Own Financing
+                                                Plan Based On Your Current Situation* & Access To 300+ Lenders)
                                             </li>
-                                            <li>$500 in free ads (Today Only)</li>
-                                            <li>Get 25% Off Of Tradelines With Our Program</li>
                                             <li>Free Access To Our Affiliate Program</li>
                                             <li>100% action based money-back guarantee if you are not satisfied</li>
                                         </ul>
                                         <br>
                                         <div class="col-md-12 mt-2">
-                                            <a href="/financing" class="btn btn-theme btn-circle">$1,499 Payment
-                                                Option</a><br><br>
-                                            <a href="/financing" class="btn btn-theme btn-circle">No Money Down
-                                                Option Subject To Financing</a><br><br>
-                                            <a href="/financing" class="btn btn-theme btn-circle">3 Monthly Payment
-                                                Option Of $549</a><br><br>
-                                            <a href="/financing" class="btn btn-theme btn-circle">Monthly Payment
-                                                Option Of $159.99</a>
+                                            <a href="/financing" class="btn btn-theme btn-circle">$999 Annual Payment Option</a><br><br>
+                                            <a href="/financing" class="btn btn-theme btn-circle">No Money Down Option Subject To
+                                                Financing</a><br><br>
+                                            <a href="/financing" class="btn btn-theme btn-circle">$109.99 Monthly Payment Option</a><br>
                                         </div>
                                     </div>
                                 </div>
