--- a/getdinerotoday/templates/landingpages/about-us.html
+++ b/getdinerotoday/templates/landingpages/about-us.html
@@ -104,38 +104,106 @@
   </div>
 </section>
 
-<section class="pt-0">
-  <div class="container">
-    <div class="row align-items-center">
-      <div class="col-lg-6 col-md-12 my-btn-in-desktop">
-        <div class="video-btn video-btn-pos"> <a class="play-btn popup-youtube" href="https://www.youtube.com/watch?v=dAdSU6r5jPc"><i class="la la-play"></i></a>
-          <div class="spinner-eff">
-            <div class="spinner-circle circle-1"></div>
-            <div class="spinner-circle circle-2"></div>
-          </div>
-        </div>
-        <img class="img-fluid w-100" src="/static/images/Screenshot.png" alt="">
-      </div>
-      <div class="col-lg-6 col-md-12 my-ifram-in-mobile">
-        <div class="video-responsive my-ifram-in-mobile">
-        <iframe width="100%" height="250" src="https://www.youtube.com/embed/dAdSU6r5jPc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<section class="pos-r">
+    <div class="hexagon-bg style-2">
+        <div class="hexagon"></div>
+        <div class="hexagon"></div>
+        <div class="hexagon"></div>
+        <div class="hexagon"></div>
     </div>
-      </div>
-      <div class="col-lg-6 col-md-12 md-mt-5">
-        <div class="section-title mb-3">
-          <div class="title-effect title-effect-2">
-            <div class="ellipse"></div> <i class="la la-info"></i>
-          </div>
-          <h2>We're Helping Clients Build Business Credits</h2>
+    <div class="container">
+        <div class="row text-center">
+            <div class="col-lg-8 col-md-12 ml-auto mr-auto">
+                <div class="section-title">
+                    <div class="title-effect title-effect-2">
+                        <div class="ellipse"></div>
+                        <i class="la la-money"></i>
+                    </div>
+                    <h2 class="title">Our Different Payment Options</h2>
+                </div>
+            </div>
         </div>
-        <p class="lead">Click The Play Button To The Left To See Our Software Demo</p>
-        <a class="btn btn-theme btn-circle" href="/pricing" data-text="">Sign Up Today
-        </a>
-        <a class="btn btn-dark btn-circle" href="https://getdinerotoday.setmore.com/resourcebookingpage/r8bbebe11bc17836e0391491b03bf0426b86724a4" target="_blank" data-text=""> Schedule An Appointment
-        </a>
-      </div>
+        <div class="row align-items-center">
+            <div class="col-lg-6 col-md-6">
+                <div class="forever">
+                    <div class="price-table">
+                        <div class="price-inside">Starter</div>
+                        <div class="price-header mb-3">
+                            <h2 class="price-title">Forever Free Package</h2>
+                            <br>
+                        </div>
+                        <div class="price-list">
+                            <ul class="list-unstyled">
+                                <li>Create My Financing Plan Access</li>
+                                <li>Create My Business Credit Building Plan Access</li>
+                                <li>Create My Credit Repair Plan Access</li>
+                                <li>Apply For Business Loan Access To Get Best Rates</li>
+                                <li>Business Credit Building Course (Usually $1,000)</li>
+                                <li>Full Starter Vendor, Retail Store Credit, Revolving Store Credit, & Cash Credit
+                                    List
+                                </li>
+                                <li>Your Own Backend Client Portal To Track Progress</li>
+                                <li>Full Access To Our Create My Financing Plan Section (*You Get Your Own Financing
+                                    Plan Based On Your Current Situation* & Access To 300+ Lenders)
+                                </li>
+                            </ul>
+                            <br>
+                            <div class="col-md-12 mt-2">
+                                <a href="https://www.getdinerotoday.com/user/login/" class="btn btn-theme btn-circle">Sign Up For Forever Free
+                                    Package</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6 col-md-6 md-mt-5">
+                <div class="price-table active">
+                    <div class="price-header">
+                        <h3 class="price-title">Business Credit Builder Package</h3>
+                    </div>
+                    <br>
+                    <div class="price-list">
+                        <ul class="list-unstyled">
+                            <li>We help you get $50,000 in business vendor credit, we set up your business credibly,
+                                and manage your account
+                            </li>
+                            <li>Create My Financing Plan Access</li>
+                            <li>Create My Business Credit Building Plan Access</li>
+                            <li>Create My Credit Repair Plan Access</li>
+                            <li>Apply For Business Loan Access To Get Best Rates</li>
+                            <li>Website Design (Usually $2,000+)</li>
+                            <li>Free Web Hosting For The Entire Year</li>
+                            <li>We Buy Your Fax Number For Entire Year(Usually $100+)</li>
+                            <li>Professional Email (Usually $100+)</li>
+                            <li>Toll-Free Number Purchase For The Entire Year (Whole sale rate of $10 Per Month On
+                                Up To 2 Other Members) (Savings Of $1,500+ Per Year)
+                            </li>
+                            <li>Business Credit Building Course (Usually $1,000)</li>
+                            <li>Full Starter Vendor, Retail Store Credit, Revolving Store Credit, & Cash Credit
+                                List
+                            </li>
+                            <li>411 Listing</li>
+                            <li>Full Video Library & Live Chat Assistants To Be Able To Answer Any Questions 24/7
+                            </li>
+                            <li>Your Own Backend Client Portal To Track Progress</li>
+                            <li>Full Access To Our Create My Financing Plan Section (*You Get Your Own Financing
+                                Plan Based On Your Current Situation* & Access To 300+ Lenders)
+                            </li>
+                            <li>Free Access To Our Affiliate Program</li>
+                            <li>100% action based money-back guarantee if you are not satisfied</li>
+                        </ul>
+                        <br>
+                        <div class="col-md-12 mt-2">
+                            <a href="/financing" class="btn btn-theme btn-circle">$999 Annual Payment Option</a><br><br>
+                            <a href="/financing" class="btn btn-theme btn-circle">No Money Down Option Subject To
+                                Financing</a><br><br>
+                            <a href="/financing" class="btn btn-theme btn-circle">$109.99 Monthly Payment Option</a><br>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-  </div>
 </section>
 
 <!--about end-->
@@ -398,7 +466,6 @@
               <li>411 Listing</li>
               <li>Full Video Library & Live Chat Assistants To Be Able To Answer Any Questions 24/7</li>
               <li>Your Own Backend Client Portal To Track Progress</li>
-              <li>Free Credit Repair For The Entire Year (Today Only)</li>
               <li>Full Access To Our Create My Financing Plan Section (*You Get Your Own Financing Plan Based On Your Current Situation* & Access To 300+ Lenders)</li>
               <li>$500 in free ads (Today Only)</li>
               <li>Get 25% Off Of Tradelines With Our Program</li>
