--- a/getdinerotoday/templates/landingpages/components/Footer.html
+++ b/getdinerotoday/templates/landingpages/components/Footer.html
@@ -1,3 +1,13 @@
+<script>
+  window.intercomSettings = {
+    app_id: "as9lv2pj"
+  };
+</script>
+
+<script>
+// We pre-filled your app ID in the widget URL: 'https://widget.intercom.io/widget/as9lv2pj'
+(function(){var w=window;var ic=w.Intercom;if(typeof ic==="function"){ic('reattach_activator');ic('update',w.intercomSettings);}else{var d=document;var i=function(){i.c(arguments);};i.q=[];i.c=function(args){i.q.push(args);};w.Intercom=i;var l=function(){var s=d.createElement('script');s.type='text/javascript';s.async=true;s.src='https://widget.intercom.io/widget/as9lv2pj';var x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);};if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})();
+</script>
 <footer class="footer pt-8 " data-bg-img="/static/images/pattern/03.png">
   <div class="primary-footer">
     <div class="container-fluid">
@@ -14,12 +24,6 @@
             <li>Phone: <a href="tel:8777262604"><b>877-726-2604</b></a>
             </li>
           </ul>
-          <div class="social-icons social-border social-hover mt-3">
-              <ul class="list-inline">
-                <li class="social-facebook"><a href="https://www.facebook.com/Millennial-Business-Builders-198386941114067/?modal=admin_todo_tour"><i class="fab fa-facebook-f"></i></a>
-                </li>
-              </ul>
-            </div>
         </div>
       </div>
     </div>
@@ -28,7 +32,7 @@
     <div class="container-fluid">
       <div class="copyright">
         <div class="row align-items-center">
-          <div class="col-lg-6 col-md-12"> <span>Copyright 2019 Get Dinero Today  | All Rights Reserved</span>
+          <div class="col-lg-6 col-md-12"> <span>Copyright 2020 Get Dinero Today  | All Rights Reserved</span>
           </div>
         </div>
       </div>
