--- a/getdinerotoday/templates/landingpages/components/Header.html
+++ b/getdinerotoday/templates/landingpages/components/Header.html
@@ -73,13 +73,13 @@
                         <div class="collapse navbar-collapse" id="navbarNavDropdown">
                             <!-- Left nav -->
                             <ul id="main-menu" class="nav navbar-nav ml-auto mr-auto">
-                                <li class="nav-item"><a class="nav-link active" href="/">Home</a>
+                                <li class="nav-item"><a class="nav-link" href="/">Home</a>
                                 </li>
                                 <li class="nav-item"><a class="nav-link" href="/about-us">About Us</a><br>
                                     <ul>
-                                        <li class="nav-item"><a class="nav-link" href="/faq">Faq</a>
+                                      <!--  <li class="nav-item"><a class="nav-link" href="/faq">Faq</a>
                                         </li>
-                                        <br>
+                                        <br> -->
                                         <li><a class="nav-link" href="/about-us">Our Story</a>
                                         </li>
                                         <br>
@@ -102,7 +102,7 @@
                                         </li>
                                     </ul>
                                 </li>
-                                <li><a class="nav-link" href="/affiliate_program">Affiliate Program</a>
+                                <li><a class="nav-link" href="https://getdinerotodayaffiliateprogram.tapfiliate.com/" target="_blank">Affiliate Program</a>
                                 </li>
                                 <li class="nav-item"><a class="nav-link" href="/contact">Contact Us</a>
                                 </li>
