--- a/getdinerotoday/templates/landingpages/financing.html
+++ b/getdinerotoday/templates/landingpages/financing.html
@@ -71,59 +71,23 @@
           <div class="col-lg-4 col-md-4 col-md-12">
             <div class="contact-media">
               <img class="img-center" src="/static/images/viabill.jpg" alt="">
-              <span>Buy Now. Pay Later. 4 Interest Free Installments. 0% Interest</span>
+              <span>No Money Down Payment Option With Klarna</span>
               <span>Watch Video Below To See How To Purchase With Payment Option</span>
               <iframe width="100%" height="315" src="https://www.youtube.com/embed/7PmxNTZZ_Oo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               <div class="col-md-12 mt-2">
-                <a href="https://millennialsbuildinggreatness.com/products/business-builders-three-payment-package-300-down-with-viabill" class="btn btn-theme btn-circle" target="_blank" >Click Here To Do A Down Payment Of $72.50 & Spread Your Payments Bi Weekly At $300 Per Every Two Weeks Over The Next 2 Months</a>
+                <a href="https://millennialsbuildinggreatness.com/products/business-builders-annual-package" class="btn btn-theme btn-circle" target="_blank" >Click Here To Do A Down Payment Of $72.50 & Spread Your Payments Bi Weekly At $300 Per Every Two Weeks Over The Next 2 Months</a>
               </div>
             </div>
           </div>
-          <div class="col-lg-4 col-md-4 md-mt-5">
-            <div class="contact-media">
-              <img class="img-center" src="/static/images/klarna-og.jpg" alt="">
-              <span>Buy Now. Pay Later. 4 Interest Free Installments. 0% Interest</span>
-              <span>Watch Video Below To See How To Purchase With Payment Option</span>
-              <iframe width="100%" height="315" src="https://www.youtube.com/embed/sJPh6dw4O0Y" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-              <div class="col-md-12 mt-2">
-                <a href="https://millennialsbuildinggreatness.com/products/business-builders-annual-package" class="btn btn-theme btn-circle" target="_blank" >Click Here To Purchase Now & Pay Over The Next 12-36 Months At 0%-10% Interest</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-4 md-mt-5">
-            <div class="contact-media">
-              <img class="img-center" src="/static/images/fundbox.jpg" alt="">
-              <span>Fundbox Pay Up To 52 week financing</span>
-              <span>Watch Video Below To See How To Purchase With Payment Option</span>
-              <iframe width="100%" height="315" src="https://www.youtube.com/embed/4UnIYE9ABwA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-              <div class="col-md-12 mt-2">
-                <a href="https://fundboxpay.com/pay" class="btn btn-theme btn-circle" target="_blank" >Click Here To Purchase Now & Pay Over The Next 52 Weeks With 1-2% Interest Per Month</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="container">
-        <div class="row align-items-center">
-          <div class="col-lg-4 col-md-4 col-md-12">
-            <div class="contact-media">
-              <img class="img-center" src="/static/images/behalf.jpeg" alt="">
-              <span>Payments Over 6 Months 1% Interest Per Month</span>
-              <span>Watch Video Below To See How To Purchase With Payment Option</span>
-              <iframe width="100%" height="315" src="https://www.youtube.com/embed/-NKit3HMwJg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-              <div class="col-md-12 mt-2">
-                <a href="https://app.behalf.com/invite/R4xfcKmU" class="btn btn-theme btn-circle" target="_blank" >Click Here To Purchase Now & Pay 1-2% Interest Over The Next 4-6 Months</a>
-              </div>
-            </div>
-          </div>
+
          <div class="col-lg-4 col-md-4 md-mt-5">
             <div class="contact-media">
               <img class="img-center" src="https://newsroom.mastercard.com/wp-content/uploads/2016/09/paypal-logo.png" alt="">
-              <span>Business Builder Program Monthly Package Monthly Payments Of $159.99</span>
+              <span>Business Builder Program Monthly Package Monthly Payments Of $109.99</span>
               <span>Watch Video Below To See How To Purchase With Payment Option</span>
               <iframe width="100%" height="315" src="https://www.youtube.com/embed/ppd1hzQ8dLQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               <div class="col-md-12 mt-2">
-                  <p>Click Button Below To Make Monthly Payments Of $159.99</p><br>
+                  <p>Click Button Below To Make Monthly Payments Of $109.99</p><br>
                   <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
    <input type="hidden" name="cmd" value="_s-xclick">
    <input type="hidden" name="hosted_button_id" value="JHUCXD2TWBEMA">
@@ -139,11 +103,11 @@
            <div class="col-lg-4 col-md-4 md-mt-5">
             <div class="contact-media">
               <img class="img-center" src="https://newsroom.mastercard.com/wp-content/uploads/2016/09/paypal-logo.png" alt="">
-              <span>Business Builder Program Annual Package One Payment Of $1,499</span>
+              <span>Business Builder Program Annual Package One Payment Of $999</span>
               <span>Watch Video Below To See How To Purchase With Payment Option</span>
               <iframe width="100%" height="315" src="https://www.youtube.com/embed/ppd1hzQ8dLQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               <div class="col-md-12 mt-2">
-                  <p>Click Button Below To Make $1,499 Payment</p><br>
+                  <p>Click Button Below To Make $999 Payment</p><br>
                   <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
                      <input type="hidden" name="cmd" value="_s-xclick">
                      <input type="hidden" name="hosted_button_id" value="VXRETN67PQDL2">
