--- a/business/templates/userData/BusinessCreditSteps.html
+++ b/business/templates/userData/BusinessCreditSteps.html
@@ -19,6 +19,7 @@
             <div class="row justify-content-center">
                 <div class="card">
                     <div class="card-body">
+                        <form method="post" id="business-programm">{% csrf_token %}</form>
                         <form method="post" id="steps-form">{% csrf_token %}
                             <div class="row mb-2">
                                 <div class="col-6">
@@ -141,15 +142,10 @@
                                         <div class="text-center mb-2 font-weight-bold">
                                             Need All The Steps? Get The Business Builder Monthly Program for $109.99
                                         </div>
-{#                                        <form method="post">#}
-{#                                            <div class="text-center">#}
-{#                                                <input type="hidden" value="on" name="business_builder_program">#}
-{#                                                <button class="btn btn-primary">#}
-{#                                                    Get Business Builder Monthly Program#}
-{#                                                </button>#}
-{#                                            </div>#}
-{#                                        </form>#}
-
+                                        <div class="text-center">
+                                            <input type="hidden" value="" name="business_builder_program" id="business_builder_program">
+                                            <button class="btn btn-primary" form="business-programm">Get Business Builder Monthly Program</button>
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="card bg-gray m-2" style="width: 30rem;">
@@ -304,7 +300,6 @@
 
         $('#steps-form').submit(async function (evt) {
             evt.preventDefault();
-            console.log("hehehe")
             if (document.getElementById('domain_year').checked && await checkDomain('domain_name_year')) {
                 this.submit();
             } else if (document.getElementById('domain').checked && await checkDomain('domain_name')) {
@@ -312,6 +307,12 @@
             } else if (!document.getElementById('domain_year').checked && !document.getElementById('domain').checked) {
                 this.submit();
             }
+        });
+
+        $('#business-programm').submit(async function (evt) {
+            evt.preventDefault();
+            document.getElementById('business_builder_program').value = "on";
+            $('#steps-form').submit()
         });
 
         async function checkDomain(form_id) {
