--- a/getdinerotoday/templates/components/StylesBlock.html
+++ b/getdinerotoday/templates/components/StylesBlock.html
@@ -18,3 +18,4 @@
 
 <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
+<script src="{% static "js/x-frame-bypass.js" %}" type="module"></script>
