--- a/business/templates/businessCreditBuilding/faxNumberPaid.html
+++ b/business/templates/businessCreditBuilding/faxNumberPaid.html
@@ -37,13 +37,16 @@
                 <div class="col-md-12">
                     <br>
 
-                    <br><h3>Use Your Email You Have Used To Login To This Account & The Password: Northface14 </h3>
+                    <br>
+                    <h3>Use Your Email You Have Used To Login To This Account & The Password: Northface14 </h3>
                     <table class="table">
                         <thead class="thead-light">
                         <tr>
                             <th>Name</th>
                             <th>Status</th>
                             <th>Number</th>
+                            <th>Username</th>
+                            <th>Password</th>
                             <th>Link</th>
                         </tr>
                         </thead>
@@ -52,7 +55,11 @@
                                 <td>{{ service.name }}</td>
                                 <td>{{ service.status }}</td>
                                 <td>{{ service.product }}</td>
-                                <td><a class="btn btn-primary" target="_blank" href="https://voip.millennialbusinessbuilders.com/login">Go
+                                <td>{{ service.username }}</td>
+                                <td>{{ service.password }}</td>
+
+                                <td><a class="btn btn-primary" target="_blank"
+                                       href="https://portal.bak.atlas.wlcomm.net/login">Go
                                     To Dashboard</a></td>
                             </tr>
                         {% endfor %}
@@ -60,17 +67,16 @@
                     </a>
                 </div>
             </div>
+
+            <div class="row">
+                <div class="col d-flex flex-column justify-content-center">
+                    <br><br>
+                    <iframe is="x-frame-bypass" src="https://portal.bak.atlas.wlcomm.net/login" width="100%"
+                            height="750px" style="border:0"></iframe>
+                </div>
+            </div>
+
         {% endif %}
-{#        <div class="ro ">#}
-{#            <div class="col-md-12 text-center">#}
-{#                <br>#}
-{#                <h3>Use Your Email You Have Used To Login To This Account & The Password: Northface14 </h3>#}
-{#                <br>#}
-{#                <iframe src="https://voip.millennialbusinessbuilders.com/login" width="95%"#}
-{#                        height="800px"></iframe>#}
-{##}
-{#            </div>#}
-{#        </div>#}
     </section>
 
     <!--Start of Tawk.to Script-->
