--- a/business/templates/businessCreditBuilding/websiteCreationPaid.html
+++ b/business/templates/businessCreditBuilding/websiteCreationPaid.html
@@ -6,6 +6,7 @@
     <script type="text/javascript" src="https://chatterpal.me/build/js/chatpal.js?7.23" crossorigin="anonymous"
             data-cfasync="false">
     </script>
+
     <script>
         var chatPal = new ChatPal({
             embedId: 'DfT7BnTm5dGn',
@@ -44,6 +45,8 @@
                         <tr>
                             <th>Name</th>
                             <th>Status</th>
+                            <th>Username</th>
+                            <th>Password</th>
                             <th>URL</th>
                             <th>Go To Dashboard</th>
                         </tr>
@@ -52,31 +55,26 @@
                             <tr class="bg-white">
                                 <td>{{ service.name }}</td>
                                 <td>{{ service.status }}</td>
+                                <td>{{ service.username }}</td>
+                                <td>{{ service.password }}</td>
                                 <td>{{ service.product }}</td>
-                                <td><a class="btn btn-primary" target="_blank" href="https://www.websitebuilder.ai">Go To Dashboard</a></td>
+                                <td><a class="btn btn-primary" target="_blank" href="https://getdinerotoday.responsivesiteeditor.com/login/">Go
+                                    To Dashboard</a></td>
                             </tr>
                         {% endfor %}
                     </table>
                     </a>
                 </div>
             </div>
+            <div class="row">
+                <div class="col d-flex flex-column justify-content-center">
+                    <br><br>
+                    <iframe is="x-frame-bypass" src="http://getdinerotoday.responsivesiteeditor.com/login" width="100%"
+                            height="750px" style="border:0"></iframe>
+                </div>
+            </div>
+
         {% endif %}
-        <br><br>
-        <!-- <div class="row">
-           <div class="col-md-12">
-             <h2 style="text-align:center;">Login With The Email You Have Associated With This Account & The Password Northface14. If You Do Not Remember Go To My Progress In The Top Right Corner To View Your Login Credentials.</h2>
-             <br><br>
-             <iframe src="https://www.websitebuilder.ai/" width="90%" height="750px"></iframe>
-           </div>
-         </div> -->
-        {#        <div class="row">#}
-        {#            <div class="col-md-12">#}
-        {#                <br>#}
-        {#                <center><h3>Use Your Email You Have Used To Login To This Account & The Password: Northface14 </h3>#}
-        {#                    <center><br>#}
-        {#                        <iframe src="https://www.websitebuilder.ai" width="95%" height="800px"></iframe>#}
-        {#            </div>#}
-        {#        </div>#}
 
     </section>
 
