--- a/user/templates/my_progress.html
+++ b/user/templates/my_progress.html
@@ -189,7 +189,7 @@
                     <div class="widget-title"><p>My Ordered Services</p></div>
                     <div class="widget-content">
 
-                        <table class="table">
+                        <table class="table table-responsive">
                             <thead class="thead-light">
                             <tr>
                                 <th>Name</th>
