--- a/user/templates/login.html
+++ b/user/templates/login.html
@@ -14,6 +14,7 @@
     {% endif %}
     <form class="new_user" id="new_user" action="{% url 'user:login' %}" accept-charset="UTF-8" method="post">
         {% csrf_token %}
+        <input type="hidden" name="next" value="{{ next }}" />
         <div class="form-group">
             <label for="user_email">Email</label>
             <div class="group-icon">
@@ -29,12 +30,6 @@
             </div>
         </div>
         <div class="clearfix">
-            <!--        <div class="float-left">-->
-            <!--          <div class="checkbox checkbox-primary margin-r-5">-->
-            <!--            <input name="user[remember_me]" type="hidden" value="0" /><input type="checkbox" value="1" name="user[remember_me]" id="user_remember_me" />-->
-            <!--            <label for="user_remember_me">Remember me</label>-->
-            <!--          </div>-->
-            <!--        </div>-->
             <div class="float-right">
                 <input type="submit" name="commit" style="height: 40px;" value="Log in"
                        class="btn btn-block btn-primary btn-rounded box-shadow" data-disable-with="Log in"/>
