--- a/business/templates/businessCreditBuilding/faxNumber.html
+++ b/business/templates/businessCreditBuilding/faxNumber.html
@@ -54,7 +54,7 @@
                                 <form method="post">
                                     {% csrf_token %}
                                     Fax Numbers To Choose From<br>
-                                    <select class="custom-select mb-2">
+                                    <select class="custom-select mb-2" name="prefix">
                                         <option value="888 (Toll Free Prefix)">888 (Toll Free Prefix)</option>
                                         <option value="877 (Toll Free Prefix)">877 (Toll Free Prefix)</option>
                                         <option value="866 (Toll Free Prefix)">866 (Toll Free Prefix)</option>
