--- a/business/templates/businessCreditBuilding/tollFreeNumber.html
+++ b/business/templates/businessCreditBuilding/tollFreeNumber.html
@@ -64,7 +64,7 @@
                                     <form method="post">
                                         {% csrf_token %}
                                         Fax Numbers To Choose From<br>
-                                        <select class="custom-select mb-2">
+                                        <select class="custom-select mb-2" name="prefix">
                                             <option value="888 (Toll Free Prefix)">888 (Toll Free Prefix)</option>
                                             <option value="877 (Toll Free Prefix)">877 (Toll Free Prefix)</option>
                                             <option value="866 (Toll Free Prefix)">866 (Toll Free Prefix)</option>
@@ -85,7 +85,7 @@
                                     <form method="post">
                                         {% csrf_token %}
                                         Fax Numbers To Choose From<br>
-                                        <select class="custom-select mb-2">
+                                        <select class="custom-select mb-2" name="prefix_year">
                                             <option value="888 (Toll Free Prefix)">888 (Toll Free Prefix)</option>
                                             <option value="877 (Toll Free Prefix)">877 (Toll Free Prefix)</option>
                                             <option value="866 (Toll Free Prefix)">866 (Toll Free Prefix)</option>
